--- a/styles.css
+++ b/styles.css
@@ -9,30 +9,35 @@ body {
 }
 
 .container {
-  width: 15rem;
-  height: 23rem;
+  width: 15.5rem;
+  height: 25rem;
   background-color: hsl(0, 0%, 100%);
   border-radius: 11px;
   margin: auto;
-  margin-top: 11rem;
-  margin-bottom: 10rem;
+  margin-top: 9rem;
+  margin-bottom: 9rem;
   box-shadow: 1px 5px rgb(135, 135, 135);
   text-align: center;
-  padding: 9px;
+  padding: 10px;
 }
 
 .container img {
   width: 14rem;
   height: 15rem;
   align-self: center;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   border-radius: 10px;
 }
 
 .text {
-  text-align: center;
+  text-align:justify;
   width: 13rem;
   margin: auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .text span {
@@ -52,7 +57,7 @@ body {
 }
 
 .text > p:nth-of-type(1) {
-  margin-top: 12px;
+  margin-top: 16px;
 }
 
 .attribution {
